crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_transform__convert_transform-5.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_transform.rs
expression: "test_config(r#\"{ \"convertTransform\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 128 128\">\n  <rect x=\"-45\" y=\"-77\" height=\"3\" width=\"8\" transform=\"matrix(0,-1,-1,0,0,0)\" />\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
    <rect x="-45" y="-77" height="3" width="8" transform="rotate(90)scale(-1 1)"/>
</svg>
