crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_transform__convert_transform-6.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_transform.rs
expression: "test_config(r#\"{ \"convertTransform\": { \"degPrecision\": 1 } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 256 256\">\n  <text y=\"32\" transform=\"matrix(1.0000002 0 0 1 0 0)\">uwu</text>\n  <text y=\"64\" transform=\"matrix(1 0 0 1 0.00002 0)\">uwu</text>\n  <text y=\"96\" transform=\"matrix(0.9999999847691 1.745329243133368e-4 -1.745329243133368e-4 0.9999999847691 0 0)\">uwu</text>\n  <text y=\"128\" transform=\"matrix(1.0000002 0 0 1 0.00002 0)\">uwu</text>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
    <text y="32">uwu</text>
    <text y="64">uwu</text>
    <text y="96">uwu</text>
    <text y="128">uwu</text>
</svg>
