crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_transform__convert_transform-7.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_transform.rs
expression: "test_config(r#\"{ \"convertTransform\": { \"degPrecision\": 3 } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 64 64\">\n  <text x=\"-32\" y=\"32\" transform=\"matrix(-1,0,-0.3,0.9,0,0)\">uwu</text>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
    <text x="-32" y="32" transform="scale(-1 .9)skewX(16.7)">
        uwu
    </text>
</svg>
