crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_transform__convert_transform_unit_translate.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_transform.rs
expression: "test_config(r#\"{ \"convertTransform\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- a translation of (1, 1) is not an identity -->\n    <g transform=\"matrix(1 0 0 1 1 1)\"/>\n    <g transform=\"translate(4 4) translate(-3 -3)\"/>\n    <g transform=\"translate(1 1) translate(-10 -10) translate(10 10)\"/>\n    <g transform=\"translate(1 1) scale(2)\"/>\n    <g transform=\"translate(1 1) rotate(30)\"/>\n    <!-- a translation of (0, 0) is -->\n    <g transform=\"translate(1 1) translate(-1 -1)\"/>\n    <g transform=\"translate(1 1) translate(-1 -1) scale(2)\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- a translation of (1, 1) is not an identity -->
    <g transform="translate(1 1)"/>
    <g transform="translate(1 1)"/>
    <g transform="translate(1 1)"/>
    <g transform="matrix(2 0 0 2 1 1)"/>
    <g transform="rotate(30 -1.366 2.366)"/>
    <!-- a translation of (0, 0) is -->
    <g/>
    <g transform="scale(2)"/>
</svg>
